# agent-cron-scheduler

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DEVIATIONS_FROM_SPEC.md  ENHANCEMENTS.md  NEW_README.md  README.md  README_DEVELOPERS.md  SPEC.md  build.rs  config.example.json  test_stream.bat
.beads/: issues.jsonl  metadata.json
.github/workflows/: beads-sync.yml  ci.yml
acs/: Cargo.toml  build.rs
acs/src/: main.rs
acs/src/cli/: daemon.rs  jobs.rs  mod.rs
acs/src/daemon/: events.rs  executor.rs  mod.rs  scheduler.rs  service.rs
acs/src/models/: dispatch.rs  job.rs  mod.rs  run.rs
acs/src/pty/: mod.rs
acs/tests/: api_tests.rs  scheduler_tests.rs
acs/web/: index.html  openapi.yaml
docs/: INDEX.md  KNOWN_ISSUES.md  SPEC.md  api-reference.md  architecture.md  beads-sync.md  cli-reference.md  configuration.md  job-management.md  service-registration.md  storage.md
frontend/: next.config.ts  package-lock.json  package.json
new_docs/: INDEX.md  api-reference.md  architecture.md  cli-reference.md  configuration.md  job-management.md  service-registration.md  storage.md  troubleshooting.md
src/: errors.rs  lib.rs  main.rs
src/cli/: daemon.rs  jobs.rs  logs.rs  mod.rs
src/daemon/: executor.rs  mod.rs  scheduler.rs  service.rs  windows_service.rs
src/models/: config.rs  job.rs  mod.rs
src/pty/: mod.rs
src/server/: assets.rs  health.rs  mod.rs  routes.rs
src/storage/: jobs.rs  logs.rs  mod.rs
tests/: api_tests.rs  cli_tests.rs  scheduler_tests.rs
web/: app.js  index.html  openapi.yaml  style.css
web.backup/: index.html  style.css
(+54 files in other folders)
