[package]
name = "agent-cron-scheduler"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "acs"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
clap = { version = "4.5", features = ["derive"] }
croner = "3"
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v7", "serde"] }
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
fs4 = { version = "0.13", features = ["tokio"] }
dirs = "6"

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
tokio-test = "0.4"
http-body-util = "0.1"
